# OpenZen

./: .gitignore  README.md  SECURITY_AUDIT.md  build.gradle  gradle.properties
.github/ISSUE_TEMPLATE/: bug.yml  crash.yml  suggest.yml
.github/workflows/: build-loader.yml  build.yml
artifacts/: OpenZen-acmuhan-1.0.0.jar.sha256  openzen-examplemod-1.0.0.jar.sha256
mapping/: BACKDOOR.md  zen.mapping
native/: CMakeLists.txt
native/dll/: CMakeLists.txt
native/dll/res/: openzen.rc  resource.h
native/dll/src/: diagnostics.cpp  jar_extract.cpp  jvm_attach.cpp  main.cpp  openzen.h
native/loader/: CMakeLists.txt
native/loader/res/: loader.rc  resource.h
native/loader/src/: MainWindow.cpp  embedded_dll.cpp  injector.cpp  loader.h  main.cpp  manual_map.cpp  manual_map.h  process_list.cpp  ui.cpp  window_title.cpp
paste/: README.md
src/main/java/asm/patchify/loader/: AttachHelper.java  PatchAgent.java  PatchLaunchPlugin.java  PatchRegistry.java  PatchTransformer.java
src/main/java/shit/zen/: ZenClient.java
src/main/java/shit/zen/event/impl/: FallFlyingEvent.java  HeadTurnEvent.java  JumpMarkerEvent.java  RayTraceEvent.java  UseItemRayTraceEvent.java
src/main/java/shit/zen/gui/: AgentWarningScreen.java  BuildSourceScreen.java  PanelClickGui.java
src/main/java/shit/zen/gui/panel/: ModuleListPanel.java
src/main/java/shit/zen/hud/: NeverloseWatermark.java
src/main/java/shit/zen/modules/impl/combat/antikb/: MixMode.java
src/main/java/shit/zen/modules/impl/movement/: FastUse.java  NoSlow.java
src/main/java/shit/zen/modules/impl/player/: InventoryManager.java
src/main/java/shit/zen/modules/impl/render/: OldHitting.java
src/main/java/shit/zen/patch/: LivingEntityRendererPatch.java  MinecraftPatch.java
src/main/java/shit/zen/render/: Fonts.java
src/main/java/shit/zen/utils/misc/: ReflectionUtil.java
src/main/resources/webui/: index.html
